--- a/room_stats/templates/room_stats/rooms.html
+++ b/room_stats/templates/room_stats/rooms.html
@@ -5,7 +5,8 @@
     <li><a href="/rooms/random">Random</a></li>
     <li><a href="/rooms/top">Top by members</a></li>
     <li><a href="/rooms/russian">Russian</a></li>
-    <li><a href="/rooms/tags">With tags</a></li>
+    <br>
+    <li><a href="/rooms/tags">Tags</a></li>
   </ul>
 
 {% endblock content %}
