--- a/room_stats/templates/room_stats/tag_list.html
+++ b/room_stats/templates/room_stats/tag_list.html
@@ -2,8 +2,10 @@
 
 {% block content %}
   {% for tag in tags %}
-    {% url 'rooms-with-tag' tag=tag as rooms_url %}
-      <a class="tag-cloud" href="{{ rooms_url }}">#{{tag}} </a>
+    {% url 'rooms-with-tag' tag=tag.id as rooms_url %}
+<!-- <a class="tag-cloud" href="{{ rooms_url }}">#{{tag}}({{num}}) </a> -->
+
+  <a class="tag-cloud" href="{{ rooms_url }}">#{{tag.id}} </a>
   {% endfor %}
 
 {% endblock content %}
