--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -27,6 +27,10 @@ a.tag-cloud {
   border-radius: 2px;
 }
 
+.room-public {
+  border-right: 1px grey dashed ;
+}
+
 .room-container > h1 {
   font-size: 16px;
   margin: 0 0 10px 0;
