--- a/source/room_stats/templates/room_stats/rooms.html
+++ b/source/room_stats/templates/room_stats/rooms.html
@@ -4,10 +4,16 @@
   <ul>
     <li><a href="/rooms/random">Random</a></li>
     <li><a href="/rooms/top">Top by members</a></li>
-    <li><a href="/rooms/russian">Russian</a></li>
+    <li><a href="/rooms/cyrillic">Cyrillic</a></li>
     <br>
     <li><a href="/rooms/tags">Tags</a></li>
+    <li>
+      <input placeholder="Search" id="search_term" />
+      <input type="submit" value="Search" onclick="search_by_term();" />
+    </li>
   </ul>
+
+  <!-- Development in progress :) -->
 
 {% endblock content %}
 
