--- a/source/room_stats/templates/room_stats/rooms.html
+++ b/source/room_stats/templates/room_stats/rooms.html
@@ -11,6 +11,8 @@
       <input placeholder="Search" id="search_term" />
       <input type="submit" value="Search" onclick="search_by_term();" />
     </li>
+    <br>
+    <li><a href="{% url 'server-stats' server='matrix.org' %}">matrix.org stats</a></li>
   </ul>
 
   <!-- Development in progress :) -->
