--- a/source/room_stats/templates/room_stats/rooms_list.html
+++ b/source/room_stats/templates/room_stats/rooms_list.html
@@ -5,7 +5,19 @@
     {% url 'room-stats' room_id=room.id as room_url %}
     <div class="room-container {% if room.is_public_readable %}room-public{% endif %}" onclick="document.location='{{ room_url }}'">
       <h1><a href="{% url 'room-stats' room_id=room.id %}">{{ room.name }}</a></h1>
-      <div class="room-members-count">{{ room.members_count }}</div>
+      <div class="room-members-count">
+        {{ room.members_count }}
+        {% if rating %}
+          <br/>
+          {% if rating == 'absolute' %}
+            {{ room.delta|stringformat:"+d" }}
+          {% endif %}
+          {% if rating == 'relative' %}
+            {{ room.percentage|stringformat:"+d" }}&#37;
+          {% endif %}
+        {% endif %}
+      </div>
+
       <div class="room-desc">{{ room.topic }}</div>
     </div>
 
