--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -41,31 +41,66 @@ a.tag-cloud {
   cursor: pointer;
   background-color: rgb(245,245,245);
   border-radius: 2px;
+
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+}
+
+.room-title {
+  font-size: 16px;
+  margin: 0 0 10px 0;
+  flex: 1 100%;
+  font-weight: bold;
+}
+
+a.room-title,
+a:visited.room-title{
+  text-decoration: none;
+  color: rgb(119,119,119);
 }
 
 .room-public {
   border-right: 1px grey dashed ;
 }
 
-.room-container > h1 {
-  font-size: 16px;
-  margin: 0 0 10px 0;
+.room-description {
+  flex: 1;
 }
 
-.room-container > h1 a, .room-container > h1 a:visited {
-  text-decoration: none;
-  color: rgb(119,119,119);
-
+.room-members-stats {
+  padding-left: 10px;
+  flex: 0;
+  display: flex;
+  flex-direction: left;
+  flex-wrap: wrap;
 }
 
 .room-members-count {
   font-size: 0.8em;
-  float: right;
+  flex: 1 100%;
+  margin-bottom: 5px;
+  text-align: right;
+}
+
+.room-members-modifier {
+  font-size: 0.6em;
+  flex: 1 100%;
+  text-align: right;
+  color: rgb(119,119,119);
 }
 
 .room-desc {
   font-size: 0.6em;
 }
+
+.room-desc-empty {
+  color: rgb(90,90,90);
+}
+
+
+
 
 
 /*
