--- a/source/room_stats/templates/room_stats/rooms.html
+++ b/source/room_stats/templates/room_stats/rooms.html
@@ -7,6 +7,12 @@
     <li><a href="/rooms/random">Random</a></li>
     <li><a href="/rooms/cyrillic">Cyrillic</a></li>
     <br>
+    <li>New rooms:
+      <a href="{% url 'new-1d' %}">1d</a>,
+      <a href="{% url 'new-3d' %}">3d</a>,
+      <a href="{% url 'new-weekly' %}">weekly</a>
+    </li>
+
     <li>Top absolute:
       <a href="{% url 'top-abs-weekly' %}">weekly</a>,
       <a href="{% url 'top-abs-monthly' %}">monthly</a>
