--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -107,29 +107,27 @@ a:visited.room-title{
  *
  */
 .room-details-container {
-  border: 1px grey solid;
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
 }
 
 .room-details-logo {
-  /* max-height: 128px; */
-  /* max-width: 128px; */
   width: 128px;
   height: 128px;
-  margin-right: 10px;
+  margin: 10px;
 }
 
 .room-details-logo > img {
   width: 100%;
-  heigth: 100%;
+  height: 100%;
 }
 
 .room-details-main {
   display: flex;
   flex-wrap: wrap;
   flex: 1;
+  margin: 10px;
 }
 
 
@@ -164,7 +162,6 @@ a:visited.room-title{
   flex: 1 1 100%;
   margin: 10px 10px 5px 10px;
   border: 1px grey solid;
-  border-radius: 5px;
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
@@ -186,12 +183,18 @@ a:visited.room-title{
 
 }
 
-.room-details-buttons > div {
+.room-details-buttons > a {
   display: inline-block;
-  border: 1px grey solid;
-  padding: 5px;
-  border-radius: 5px;
-  background-color: rgb(240,248,255);
+  padding: 10px;
+  text-decoration: none;
+  color: darkblue;
+  border: 1px darkblue solid;
+
+}
+
+.room-details-buttons > a:hover {
+  color: #4682B4;
+  border: 1px #4682B4 solid;
 }
 
 /* .room-details-links > div:nth-child(-n+3){ */
@@ -238,4 +241,16 @@ a:visited.room-title{
 }
 
 
+/*
+ *
+ * Utils
+ *
+ */
+.positive {
+  color: green;
+}
+
+.negative {
+  color: red;
+}
 
