--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -100,6 +100,50 @@ a:visited.room-title{
 }
 
 
+/*
+ *
+ * Categories
+ *
+ */
+
+.category-block {
+  font-size: 0;
+}
+
+.category-item {
+  min-height: 200px;
+  min-width: 200px;
+  max-width: 33%;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: inline-block;
+  opacity: 0.9;
+  transition: opacity 1s;
+}
+
+.category-item > span {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0,0,0, 0.75);
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px 5px;
+}
+
+.category-item:hover {
+  opacity: 1;
+}
+
+.category-item:focus {
+  outline: none;
+}
+
+
 
 /*
  *
