--- a/source/room_stats/templates/room_stats/base.html
+++ b/source/room_stats/templates/room_stats/base.html
@@ -5,10 +5,8 @@
   <head>
     <meta charset="utf-8">
     <title>Matrix stats</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Exhaustive statistics about Matrix network and Matrix rooms">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 
     <link rel="stylesheet" href='{% static "css/main.css" %}'>
 
@@ -18,12 +16,11 @@
 
   </head>
 
-  <body>
+  <body itemscope itemtype="http://schema.org/WebPage">
     <div class="content-container">
       {% block content %}
       {% endblock content %}
     </div>
-
 
     <script src='{% static "js/main.js" %}' type="text/javascript"></script>
 
