--- a/source/room_stats/templates/room_stats/rooms_list.html
+++ b/source/room_stats/templates/room_stats/rooms_list.html
@@ -1,40 +1,53 @@
 {% extends 'room_stats/base.html' %}
 
 {% block content %}
+  <div itemscope itemtype="https://schema.org/BreadcrumbList">
   {% for room in rooms %}
     {% url 'room-stats' room_id=room.id as room_url %}
-    <div class="room-container {% if room.is_public_readable %}room-public{% endif %}" onclick="document.location='{{ room_url }}'">
-      <a class="room-title" href="{% url 'room-stats' room_id=room.id %}">
-        {{ room.name }}</a>
 
-      <div class="room-description">
-        <div class="room-desc">
+    <div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+
+      <a class="room-container {% if room.is_public_readable %}room-public{% endif %}"
+        href="{% url 'room-stats' room_id=room.id %}" itemprop="item">
+        <meta itemprop="position" content="{{ forloop.counter }}" />
+        <meta itemprop="name" content="{{ room.name }}" />
+        <meta itemprop="alternateName" content="{{ room.id }}" />
+        <meta itemprop="identifier" content="{{ room.id }}" />
+
+        <h1 class="room-name">{{ room.name }}</h1>
+
+        <div class="room-description">
           {% if room.topic %}
-            {{ room.topic }}
+            <span itemprop="description">{{ room.topic }}</span>
           {% else %}
             <i class="room-desc-empty">No description is provided</i>
           {% endif %}
         </div>
-      </div>
-      <div class="room-members-stats">
-        <div class="room-members-count">
-          {{ room.members_count }}
-        </div>
-        <div class="room-members-modifier">
-          {% if rating %}
-            {% if rating == 'absolute' %}
-              {{ room.delta|stringformat:"+d" }}
-            {% endif %}
-            {% if rating == 'relative' %}
-              {% if room.members_from == 0 or room.percentage > 300 %}
-                New
-              {% else %}
-                {% if room.percentage > 0 %}+{% else %}-{% endif %}{{ room.percentage|floatformat:"2" }}&#37;
+
+        <div class="room-members-stats">
+
+          <div class="room-members-count">
+            {{ room.members_count }}
+          </div>
+
+          <div class="room-members-modifier">
+            {% if rating %}
+              {% if rating == 'absolute' %}
+                {{ room.delta|stringformat:"+d" }}
+              {% endif %}
+              {% if rating == 'relative' %}
+                {% if room.members_from == 0 or room.percentage > 300 %}
+                  New
+                {% else %}
+                  {% if room.percentage > 0 %}+{% else %}-{% endif %}{{ room.percentage|floatformat:"2" }}&#37;
+                {% endif %}
               {% endif %}
             {% endif %}
-          {% endif %}
+          </div>
+
         </div>
-      </div>
+
+      </a>
     </div>
 
   {% endfor %}
@@ -53,4 +66,6 @@
     </div>
   {% endif %}
 
+
+  </div>
 {% endblock content %}
