Add html titles for all pages.

--- a/source/room_stats/templates/room_stats/base.html
+++ b/source/room_stats/templates/room_stats/base.html
@@ -4,8 +4,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Matrix stats</title>
-    <meta name="description" content="Exhaustive statistics about Matrix network and Matrix rooms">
+
+    <title>
+      {% block title %}
+      {% endblock %}
+    </title>
+
+    <meta name="description" content="Matrix rooms and their detailed statistics">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href='{% static "css/main.css" %}'>
