--- a/source/room_stats/templates/room_stats/rooms_list.html
+++ b/source/room_stats/templates/room_stats/rooms_list.html
@@ -1,5 +1,9 @@
 {% extends 'room_stats/base.html' %}
 
+{% block title %}
+  {{ title }}
+{% endblock %}
+
 {% block content %}
   <div itemscope itemtype="https://schema.org/BreadcrumbList">
   {% for room in rooms %}
