Temporaly disable categories.

--- a/source/room_stats/templates/room_stats/index.html
+++ b/source/room_stats/templates/room_stats/index.html
@@ -43,7 +43,7 @@
     </ul>
   </section>
 
-
+  {% comment %}
   <section>
     <header>
       <h1>Categories</h1>
@@ -57,6 +57,8 @@
       {% endfor %}
     </div>
   </section>
+
+  {% endcomment %}
 
 
   <!-- Development in progress :) -->
