--- a/source/room_stats/templates/room_stats/widgets/scrollable_rooms_widget.html
+++ b/source/room_stats/templates/room_stats/widgets/scrollable_rooms_widget.html
@@ -4,6 +4,7 @@
   <div class="scrollable-room-widget">
     <div class="scrollable-room-widget-header">
       {{ header }}
+      <a href="{{ link }}">Get more</a>
     </div>
     <div class="scroll-viewport">
       <div class="scroll-wrapper">
