--- a/source/room_stats/templates/room_stats/widgets/scrollable_rooms_widget.html
+++ b/source/room_stats/templates/room_stats/widgets/scrollable_rooms_widget.html
@@ -1,8 +1,8 @@
 {% load staticfiles %}
 
 <section>
-  <div class="scrollable-room-widget">
-    <div class="scrollable-room-widget-header">
+  <div class="widget scrollable-room-widget">
+    <div class="widget-header">
       {{ header }}
       <a href="{{ link }}">Get more</a>
     </div>
