--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -5,18 +5,25 @@ body {
   margin: 0;
   padding: 0;
 }
+
+a {
+  color: #333;
+}
+
+a:focus {
+  outline: none;
+}
+
+h1 > a {
+  text-decoration: none;
+}
+
 .content-container {
-  max-width: 1000px;
+  max-width: 1030px;
   margin: auto;
   margin-top: 10px;
   margin-bottom: 20px;
-}
-
-a.tag-cloud {
-  /* font-size: 0.8em; */
-  margin: 0px 2px;
-  color: rgb(0, 45, 90);
-  text-decoration: none;
+  padding: 15px;
 }
 
 .pagination {
@@ -29,6 +36,10 @@ a.tag-cloud {
   padding: 4px;
   text-decoration: none;
   color: rgb(80,80,80);
+}
+
+.text {
+  margin: 10px 0px;
 }
 
 /*
@@ -70,7 +81,7 @@ nav a:focus {
 }
 
 nav a:hover {
-  background-color: #666;
+  background-color: #444;
 }
 
 /*
@@ -154,8 +165,9 @@ a:visited.room-title{
   font-size: 0;
   /* max-width: 600px; */
   margin: 0 auto;
-  display: inline-block;
-  max-width: 562.5px;
+  /* display: inline-block; */
+  max-width: 750px;
+  /* max-width: 562.5px; */
 }
 
 .category-header {
@@ -169,9 +181,8 @@ a:visited.room-title{
 }
 
 .category-item {
-  min-height: 187.5px;
-  min-width: 187.5px;
-  max-width: 33%;
+  min-height: 180px;
+  min-width: 250px;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -189,8 +200,8 @@ a:visited.room-title{
   background-color: rgba(0,0,0, 0.75);
   color: white;
   text-align: center;
-  font-size: 20px;
-  padding: 10px 5px;
+  font-size: 16px;
+  padding: 8px 4px;
 }
 
 .category-item:hover {
@@ -325,6 +336,64 @@ a:visited.room-title{
 .tags-header a:focus{
   outline: none;
 }
+
+.tag-bordered {
+  border: 1px #333 solid;
+}
+
+a.tag-cloud {
+  text-decoration: none;
+  display: inline-block;
+
+  color: #111;
+  /* border: 1px #333 solid; */
+  padding: 5px 0.4em;
+  margin: 2px;
+  border-radius: 5px;
+}
+
+a.tag-cloud:hover {
+  background-color: #333;
+  color: white;
+}
+
+/*
+ *
+ * Widget
+ *
+ */
+
+.widget {
+}
+
+.widget-header {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 5px;
+  background-color: #444;
+  color: white;
+  text-align: center;
+  word-break: break-all;
+  position: relative;
+}
+
+.widget-header > a {
+  color: white;
+  font-size: 12px;
+  text-decoration: none;
+  font-weight: normal;
+  text-align: right;
+
+  position: absolute;
+  right: 10px;
+  top: 8px;
+}
+
+.category-widget {
+  max-width: 750px;
+  margin: 0 auto;
+}
+
 
 /*
  *
