Fix header selection.

--- a/source/room_stats/templates/room_stats/base.html
+++ b/source/room_stats/templates/room_stats/base.html
@@ -24,7 +24,7 @@
   <body itemscope itemtype="http://schema.org/WebPage">
 
     <nav role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
-      <div class="nav-header">Matrix Stats</div>
+      <div class="nav-header noselect">Matrix Stats</div>
       <div class="nav-links">
         <a itemprop="url" href="/">Home</a>
         <a itemprop="url" href="{% url 'ratings' %}">Ratings</a>
