--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -7,7 +7,8 @@ body {
 }
 
 a {
-  color: #333;
+  color: #444;
+  /* color: grey; */
 }
 
 a:focus {
@@ -16,6 +17,7 @@ a:focus {
 
 h1 > a {
   text-decoration: none;
+  color: black;
 }
 
 .content-container {
@@ -91,68 +93,139 @@ nav a:hover {
  */
 
 .room-container {
-  border: 1px grey solid;
-  margin-bottom: 5px;
-  padding: 10px;
-  cursor: pointer;
-  background-color: rgb(245,245,245);
-  border-radius: 2px;
-
   display: flex;
-  align-items: center;
+  max-width: 750px;
+  height: 160px;
+  text-decoration: none;
+  padding: 10px;
+  margin: 10px auto;
+  color: black;
+  border: 1px #ddd solid;
+  box-shadow: 0 0 5px #eee;
+  background-color: #fcfcfc;
+  color: #111;
+}
+
+.room-logo {
+  height: 100px;
+  width: 100px;
+  align-self: center;
+  padding: 0px 20px;
+}
+
+.room-logo > img {
+  height: 100%;
+  width: 100%;
+}
+
+.room-side-container {
+  display: flex;
+  flex: 1;
   flex-wrap: wrap;
-  text-decoration: none;
-  color: inherit;
-
+  margin-left: 10px;
 }
 
-.room-name {
-  font-size: 16px;
-  margin: 0 0 10px 0;
-  flex: 1 100%;
-  color: rgb(119,119,119);
-}
-
-a.room-title,
-a:visited.room-title{
-  text-decoration: none;
-  color: rgb(119,119,119);
-}
-
-.room-public {
-  border-right: 1px grey dashed ;
+.room-header {
+  font-size: 26px;
+  font-weight: bold;
+  flex: 1 1 100%;
 }
 
 .room-description {
-  flex: 1;
-  font-size: 0.6em;
+  flex: 1 1 100%;
+  font-size: 14px;
+  max-height: 95px;
+  overflow: auto;
+  /* font-size: 0.8em; */
 }
 
-.room-members-stats {
-  padding-left: 10px;
-  flex: 0;
+.room-description > p {
+  margin: 0;
+  padding: 0;
+}
+
+.room-details {
+  flex: 1 1 100%;
+  align-self: flex-end;
   display: flex;
-  flex-direction: left;
-  flex-wrap: wrap;
+  margin: 5px 10px 0px 0px;
+  /* border-top: 1px #ddd solid; */
 }
 
-.room-members-count {
-  font-size: 0.8em;
-  flex: 1 100%;
-  margin-bottom: 5px;
+.room-members {
+  flex: 1 1 50%;
+  font-weight: bold;
+  text-align: left;
+  color: #999;
+}
+
+.room-category {
+  flex: 1 1 50%;
   text-align: right;
 }
+/* .room-container { */
+/*   border: 1px grey solid; */
+/*   margin-bottom: 5px; */
+/*   padding: 10px; */
+/*   cursor: pointer; */
+/*   background-color: rgb(245,245,245); */
+/*   border-radius: 2px; */
 
-.room-members-modifier {
-  font-size: 0.6em;
-  flex: 1 100%;
-  text-align: right;
-  color: rgb(119,119,119);
-}
+/*   display: flex; */
+/*   align-items: center; */
+/*   flex-wrap: wrap; */
+/*   text-decoration: none; */
+/*   color: inherit; */
 
-.room-desc-empty {
-  color: rgb(90,90,90);
-}
+/* } */
+
+/* .room-name { */
+/*   font-size: 16px; */
+/*   margin: 0 0 10px 0; */
+/*   flex: 1 100%; */
+/*   color: rgb(119,119,119); */
+/* } */
+
+/* a.room-title, */
+/* a:visited.room-title{ */
+/*   text-decoration: none; */
+/*   color: rgb(119,119,119); */
+/* } */
+
+/* .room-public { */
+/*   border-right: 1px grey dashed ; */
+/* } */
+
+/* .room-description { */
+/*   flex: 1; */
+/*   font-size: 0.6em; */
+/* } */
+
+/* .room-members-stats { */
+/*   padding-left: 10px; */
+/*   flex: 0; */
+/*   display: flex; */
+/*   flex-direction: left; */
+/*   flex-wrap: wrap; */
+/* } */
+
+/* .room-members-count { */
+/*   font-size: 0.8em; */
+/*   flex: 1 100%; */
+/*   margin-bottom: 5px; */
+/*   text-align: right; */
+/* } */
+
+/* .room-members-modifier { */
+/*   font-size: 0.6em; */
+/*   flex: 1 100%; */
+/*   text-align: right; */
+/*   color: rgb(119,119,119); */
+/* } */
+
+/* .room-desc-empty { */
+/*   color: rgb(90,90,90); */
+/* } */
 
 
 /*
